# FinRAG

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
assets/parsed_md/BNPP_CP_T4-25_FR/: BNPP_CP_T4-25_FR.md
assets/parsed_md/CASA_CP_T1-26_0/: CASA_CP_T1-26_0.md
src/finrag/: __init__.py  chunking_test.py  indexing.py  parsing.py  retrieval.py
