[project]
name = "finrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul Lachaise", email = "paul.lachaise19@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "docling>=2.95.0",
    "fastapi[standard]>=0.136.3",
    "flagembedding>=1.4.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "qdrant-client>=1.18.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
